--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 flask==3.0.3
-transformers==4.41.2
+transformers==4.30.2
+tokenizers==0.13.3
 torch>=2.2.0
 pdfminer.six==20231228
 python-dotenv==1.0.1
