--- a/render.yaml
+++ b/render.yaml
@@ -3,9 +3,8 @@ services:
     name: email-classifier-app
     env: python
     plan: free
+    build:
+      pythonVersion: 3.10.12
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn -w 2 -k gthread -b 0.0.0.0:$PORT api.app:app
     autoDeploy: true
-    envVars:
-  - key: PYTHON_VERSION
-    value: 3.10.12
