--- a/render.yaml
+++ b/render.yaml
@@ -5,6 +5,7 @@ services:
     plan: free
     build:
       pythonVersion: 3.11.6
-      buildCommand: pip install -r requirements.txt
+      buildCommand: pip install -r ../requirements.txt
     startCommand: gunicorn -w 2 -k gthread -b 0.0.0.0:$PORT api.app:app
     autoDeploy: true
+    
